Fix failures in composite-action-workflows publish.
- Force push new tags, to avoid errors when branches are rewritten

This can lead to releases with tags that don't match the source any longer, and should be removed once we prevent rewrites of branches in our projects.

--- a/templates/composite-action-workflows/.github/workflows/publish.yml
+++ b/templates/composite-action-workflows/.github/workflows/publish.yml
@@ -22,8 +22,8 @@ jobs:
         id: semver
         name: Calculate version
         with:
-          bump_each_commit: true
           format: "${major}.${minor}.${patch}"
+          short_tags: false
           tag_prefix: "v"
 
       - name: Add git tags
@@ -35,15 +35,13 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           
-          git tag -a -m "Adding tags for release ${VERSION}" "v${VERSION}"
-          git push origin "v${VERSION}"
-
+          git tag --force -a -m "Add tag for release ${VERSION}" "v${VERSION}"
+          git push --force origin "v${VERSION}"
           if [ "${MAJOR}" != "0" ]; then
-            # optimistic tags move, so we force these
-            git tag --force -a -m "Adding tags for release ${VERSION}" "v${MAJOR}"
+            # optimistic tags move, so we force these operations
+            git tag --force -a -m "Add major tag for release ${VERSION}" "v${MAJOR}"
             git push --force origin "v${MAJOR}"
-
-            git tag --force -a -m "Adding tags for release ${VERSION}" "v${MAJOR}.${MINOR}"
+            git tag --force -a -m "Add major.minor tag for release ${VERSION}" "v${MAJOR}.${MINOR}"
             git push --force origin "v${MAJOR}.${MINOR}"
           fi
         shell: bash
