--- a/templates/composite-action-workflows/.github/workflows/publish.yml
+++ b/templates/composite-action-workflows/.github/workflows/publish.yml
@@ -22,6 +22,7 @@ jobs:
         id: semver
         name: Calculate version
         with:
+          change_path: action.yml
           format: "${major}.${minor}.${patch}"
           short_tags: false
           tag_prefix: "v"
@@ -31,6 +32,7 @@ jobs:
           MAJOR: ${{ steps.semver.outputs.major }}
           MINOR: ${{ steps.semver.outputs.minor }}
           VERSION: ${{ steps.semver.outputs.version }}
+        if: ${{ steps.semver.outputs.changed == 'true' }}
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
